# intents

./: CHANGELOG.md  Cargo.toml
.github/workflows/: ci.yml  release.yml
core/src/: accounts.rs  events.rs
core/src/engine/state/: cached.rs  deltas.rs  mod.rs
core/src/nonce/: salted.rs  versioned.rs
defuse/: Cargo.toml
defuse/src/: accounts.rs  intents.rs  lib.rs
defuse/src/contract/: mod.rs
defuse/src/contract/accounts/: mod.rs
defuse/src/contract/accounts/account/: mod.rs  nonces.rs
defuse/src/contract/intents/: mod.rs  state.rs
near-utils/src/: lib.rs
tests/src/tests/defuse/: mod.rs
tests/src/tests/defuse/accounts/: force.rs  manage_public_keys.rs  mod.rs  nonces.rs
tests/src/tests/defuse/intents/: mod.rs  public_key.rs  simulate.rs
tests/src/tests/defuse/state/: fee.rs  salt.rs
tests/src/utils/: fixtures.rs  mod.rs
