[package]
name = "defuse"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
defuse-admin-utils.workspace = true
defuse-auth-call.workspace = true
defuse-bitmap = { workspace = true, optional = true }
defuse-borsh-utils = { workspace = true, optional = true }
defuse-controller.workspace = true
defuse-core.workspace = true
defuse-io-utils = { workspace = true, optional = true }
defuse-near-utils.workspace = true
defuse-nep245.workspace = true
defuse-map-utils = { workspace = true, optional = true }
defuse-serde-utils.workspace = true
defuse-wnear = { workspace = true, optional = true }

bitflags = { workspace = true, optional = true }
bnum.workspace = true
impl-tools.workspace = true
near-account-id.workspace = true
near-contract-standards.workspace = true
near-plugins.workspace = true
near-sdk.workspace = true
serde_with.workspace = true
strum.workspace = true
thiserror.workspace = true

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.1-rust-1.86.0"
image_digest = "sha256:5dff91e3271ace8e679dec5c12b724108c43c2c441a52ba7c94d7ee9e20a87de"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
    "--features=abi,contract"
]


[features]
abi = ["defuse-core/abi"]
contract = [
    "dep:defuse-bitmap",
    "dep:defuse-borsh-utils",
    "dep:defuse-io-utils",
    "dep:defuse-map-utils",
    "dep:defuse-wnear",
    "dep:bitflags",
]

[dev-dependencies]
defuse-core = { workspace = true, features = ["arbitrary"] }
defuse-test-utils.workspace = true
chrono.workspace = true

arbitrary_with.workspace = true
itertools.workspace = true
rstest.workspace = true
near-sdk = { workspace = true, features = ["unit-testing"] }
